Prevent Gallery layout from jumping when loading

--- a/sass/_page-gallery.scss
+++ b/sass/_page-gallery.scss
@@ -3,6 +3,8 @@
 }
 
 .gallery-figure {
+    height: 0;
+    padding-bottom: 56.25%;
     margin: 0;
     position: relative;
 }
